Refactor Docker configuration and development setup
- Update .dockerignore with comprehensive ignore patterns for API and client
- Modify docker-compose files to improve service configurations
- Enhance Nginx configuration for development and production environments
- Refactor Dockerfile.api with improved build process
- Add docker-setup.sh script for simplified Docker deployment
- Update update-credentials.vue page with improved UI
- Remove hCaptcha dependency from package-lock.json
- Update PHP configuration and entrypoint scripts

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,38 @@
 /Dockerfile
 /data
 \.env
+
+# API ignores
+api/vendor/
+api/storage/framework/
+api/storage/logs/
+api/storage/app/
+api/.env
+api/.env.*
+api/.git/
+api/.idea/
+api/.vscode/
+api/node_modules/
+api/*.log
+
+# Client ignores
+client/node_modules/
+client/.nuxt/
+client/dist/
+client/.output/
+client/coverage/
+client/.env
+client/.env.*
+client/.git/
+client/.idea/
+client/.vscode/
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+
+# Global ignores
+**/.DS_Store
+**/*.log
+**/.git/
+**/.idea/
+**/.vscode/
