--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,65 +1,58 @@
-# Stage 1: Composer dependencies
-FROM composer:latest as composer
-WORKDIR /app
-COPY api/composer.* ./
-
-ARG APP_ENV=production
-RUN if [ "$APP_ENV" = "production" ]; then \
-    composer install --ignore-platform-req=php --no-dev --optimize-autoloader; \
-    else \
-    composer install --ignore-platform-req=php --optimize-autoloader; \
-    fi
-
-# Stage 2: Final image
 FROM php:8.3-fpm
 
-# Install system dependencies and PHP extensions
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    git \
-    curl \
+    libzip-dev \
     libpng-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip \
+    postgresql-client \
     libpq-dev \
-    && docker-php-ext-install pdo_pgsql mbstring exif pcntl bcmath gd \
+    unzip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install composer
+COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
+ENV COMPOSER_ALLOW_SUPERUSER=1
+
+# Install PHP extensions
+RUN docker-php-ext-install pdo pgsql pdo_pgsql gd bcmath zip \
     && pecl install redis \
     && docker-php-ext-enable redis
 
-# Install xdebug if not in production
-ARG APP_ENV=production
-RUN if [ "$APP_ENV" != "production" ]; then \
-    pecl install xdebug && \
-    docker-php-ext-enable xdebug; \
+WORKDIR /usr/share/nginx/html/
+
+# Create storage directories
+RUN mkdir -p storage/framework/sessions \
+    storage/framework/views \
+    storage/framework/cache \
+    storage/logs \
+    storage/app/public \
+    bootstrap/cache \
+    && chown -R www-data:www-data storage bootstrap/cache \
+    && chmod -R 775 storage bootstrap/cache
+
+# Copy composer files and helpers.php first
+COPY api/composer.json api/composer.lock ./
+COPY api/app/helpers.php ./app/helpers.php
+
+# Install dependencies without running scripts
+RUN if [ "$APP_ENV" = "production" ] ; then \
+    composer install --no-dev --no-scripts --ignore-platform-req=php --optimize-autoloader ; \
+    else \
+    composer install --no-scripts --ignore-platform-req=php --optimize-autoloader ; \
     fi
 
-# Configure PHP
-COPY docker/php/php.ini /usr/local/etc/php/conf.d/app.ini
-COPY docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
+# Copy the rest of the application
+COPY api/ .
 
-WORKDIR /usr/share/nginx/html
+# Run composer scripts and clear cache
+RUN composer dump-autoload -o \
+    && php artisan package:discover --ansi \
+    && composer clear-cache \
+    && chmod -R 775 storage \
+    && chown -R www-data:www-data storage
 
-# Copy application files
-COPY api/artisan artisan
-COPY api/bootstrap ./bootstrap
-COPY api/config ./config
-COPY api/app ./app
-COPY api/database ./database
-COPY api/public ./public
-COPY api/routes ./routes
-COPY api/tests ./tests
-COPY api/resources ./resources
-COPY api/storage ./storage
-
-# Copy vendor directory from composer stage
-COPY --from=composer /app/vendor ./vendor
-
-# Set permissions
-RUN chmod -R 775 storage \
-    && chmod -R 775 bootstrap/cache \
-    && chown -R www-data:www-data /usr/share/nginx/html
-
+# Setup entrypoint
 COPY docker/php-fpm-entrypoint /usr/local/bin/opnform-entrypoint
 RUN chmod a+x /usr/local/bin/*
 
