--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -4,35 +4,16 @@ map $original_uri $api_uri {
 }
 
 server {
-    listen       80;
-    server_name  opnform;
-    root         /usr/share/nginx/html/public;
+    listen 80;
+    server_name localhost;
+    root /usr/share/nginx/html/public;
 
     access_log /dev/stdout;
-    error_log  /dev/stderr error;
+    error_log /dev/stderr error;
 
     index index.html index.htm index.php;
 
-    # Development CORS headers
-    add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH' always;
-    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-XSRF-TOKEN' always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
-    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-
-    # Handle preflight requests
-    if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-XSRF-TOKEN' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain charset=UTF-8';
-        add_header 'Content-Length' 0;
-        return 204;
-    }
-
-    # Development proxy settings
+    # Frontend proxy
     location / {
         proxy_http_version 1.1;
         proxy_pass http://ui:3000;
@@ -43,23 +24,23 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 86400;
-        proxy_buffering off;
+        proxy_set_header Connection "Upgrade";
     }
 
     # HMR websocket support
     location /_nuxt {
         proxy_pass http://ui:3000;
         proxy_http_version 1.1;
+        proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
+    # API handling
     location ~/(api|open|local\/temp|forms\/assets)/ {
-        try_files $uri $uri/ /index.php?$query_string;
+        set $original_uri $uri;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
@@ -67,7 +48,13 @@ server {
         fastcgi_pass api:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/public/index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_param REQUEST_URI $api_uri;
+        fastcgi_read_timeout 300;
+    }
+
+    # Deny access to . files
+    location ~ /\. {
+        deny all;
     }
 } 
