--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,6 @@
-map $original_uri $api_uri {
+map $request_uri $api_uri {
     ~^/api(/.*$) $1;
-    default $original_uri;
+    default $request_uri;
 }
 
 server {
