Enhance JWT Token Management and Authentication Flow
- Implement extended token lifetime for "Remember Me" functionality
- Add token expiration details to authentication responses
- Update client-side token handling to support dynamic expiration
- Modify authentication middleware to handle token initialization more robustly
- Configure JWT configuration to support longer token lifetimes

--- a/api/.env.example
+++ b/api/.env.example
@@ -55,7 +55,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-JWT_TTL=1440
+JWT_TTL=10080
+JWT_REMEMBER_TTL=43200
 JWT_SECRET=
 
 STRIPE_KEY=
