--- a/api/composer.json
+++ b/api/composer.json
@@ -33,6 +33,7 @@
         "openai-php/client": "*",
         "propaganistas/laravel-disposable-email": "*",
         "sentry/sentry-laravel": "*",
+        "socialiteproviders/telegram": "^4.1",
         "spatie/laravel-data": "^4.6",
         "spatie/laravel-sitemap": "*",
         "spatie/laravel-sluggable": "*",
