Refactor Telegram integration for widget-based authentication
- Updated .env.example to rename Telegram bot configuration variable from TELEGRAM_BOT_NAME to TELEGRAM_BOT_ID.
- Removed the Telegram provider from composer.json to streamline dependencies.
- Enhanced FeatureFlagsController to support new bot_id configuration.
- Implemented handleWidgetRedirect method in OAuthProviderController for handling widget authentication.
- Created WidgetOAuthDriver interface and refactored OAuthTelegramDriver to implement widget-based authentication methods.
- Updated services.php to reflect changes in Telegram configuration.
- Added widget callback route for handling authentication responses.
- Refactored TelegramWidget component to utilize the new widget authentication flow.

These changes improve the Telegram integration by enabling widget-based authentication, enhancing user experience and security.

--- a/api/.env.example
+++ b/api/.env.example
@@ -94,9 +94,7 @@ GOOGLE_AUTH_REDIRECT_URL=http://localhost:3000/oauth/google/callback
 
 GOOGLE_FONTS_API_KEY=
 
-TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_ID=
 TELEGRAM_BOT_TOKEN=
-TELEGRAM_REDIRECT_URL=http://localhost:3000/settings/connections/callback/telegram
-TELEGRAM_AUTH_REDIRECT_URL=http://localhost:3000/oauth/telegram/callback
 
 ZAPIER_ENABLED=false
