--- a/api/.env.example
+++ b/api/.env.example
@@ -98,3 +98,7 @@ TELEGRAM_BOT_ID=
 TELEGRAM_BOT_TOKEN=
 
 ZAPIER_ENABLED=false
+
+STRIPE_CLIENT_ID=
+STRIPE_CLIENT_SECRET=
+STRIPE_REDIRECT_URI=http://localhost:3000/settings/connections/callback/stripe
