Enhance Docker Configuration and Health Checks
- Added PHP configuration settings in `docker-compose.dev.yml` and `docker-compose.yml` to improve memory management and execution limits, ensuring better performance for PHP applications.
- Introduced health checks for various services including `api`, `api-worker`, `api-scheduler`, `ui`, `redis`, and `db` to ensure service availability and reliability.
- Updated environment variables in `.env.docker` and `client/.env.docker` to include new keys for H-Captcha and reCAPTCHA, enhancing security features.
- Refactored the PHP-FPM entrypoint script to apply PHP configurations dynamically based on environment variables, improving flexibility in deployment.
- Removed outdated PHP configuration files to streamline the Docker setup.

These changes aim to enhance the overall stability, performance, and security of the application in a Dockerized environment.

--- a/api/.env.docker
+++ b/api/.env.docker
@@ -10,6 +10,7 @@ LOG_CHANNEL=errorlog
 LOG_LEVEL=debug
 
 FILESYSTEM_DRIVER=local
+LOCAL_FILESYSTEM_VISIBILITY=public
 
 BROADCAST_CONNECTION=log
 
@@ -36,5 +37,17 @@ AWS_BUCKET=
 
 JWT_TTL=1440
 JWT_SECRET=
+JWT_SKIP_IP_UA_VALIDATION=true
 
 OPEN_AI_API_KEY=
+
+H_CAPTCHA_SITE_KEY=
+H_CAPTCHA_SECRET_KEY=
+
+RE_CAPTCHA_SITE_KEY=
+RE_CAPTCHA_SECRET_KEY=
+
+TELEGRAM_BOT_ID=
+TELEGRAM_BOT_TOKEN=
+
+SHOW_OFFICIAL_TEMPLATES=true
