--- a/client/.env.docker
+++ b/client/.env.docker
@@ -2,3 +2,6 @@ NUXT_PUBLIC_APP_URL=/
 NUXT_PUBLIC_API_BASE=/api
 NUXT_PRIVATE_API_BASE=http://ingress/api
 NUXT_PUBLIC_ENV=dev
+NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
+NUXT_PUBLIC_RE_CAPTCHA_SITE_KEY=
+NUXT_PUBLIC_ROOT_REDIRECT_URL=
