--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y \
     autoconf \
     libc-dev \
     pkg-config \
+    procps \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
