--- a/docker/Dockerfile.client
+++ b/docker/Dockerfile.client
@@ -20,8 +20,15 @@ RUN npm cache clean --force && \
 # RUN npm install esbuild@0.21.5
 
 ADD ./client/ /app/
-# Increase Node memory limit to prevent out of memory error during build
-RUN NODE_OPTIONS="--max-old-space-size=4096" npm run build
+
+# Optimize memory usage during build
+ENV NODE_OPTIONS="--max-old-space-size=4096"
+# Set production mode to reduce memory usage
+ENV NODE_ENV=production
+# Disable source maps to reduce memory usage
+ENV GENERATE_SOURCEMAP=false
+# Run the build
+RUN npm run build
 
 FROM node:20-alpine
 WORKDIR /app
