--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,6 +7,7 @@ server {
     listen 80;
     server_name opnform;
     root /usr/share/nginx/html/public;
+    client_max_body_size ${NGINX_MAX_BODY_SIZE};
 
     access_log /dev/stdout;
     error_log /dev/stderr error;
